--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-native": "0.39.2",
     "react-native-easy-grid": "^0.1.7",
     "react-native-google-place-picker": "^1.2.1",
+    "react-native-modal-picker": "0.0.16",
     "react-native-vector-icons": "^3.0.0",
     "react-redux": "^5.0.1",
     "redux": "^3.6.0"
