--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "geo-nearby": "^2.0.1",
     "native-base": "^0.5.18",
     "react": "15.4.1",
     "react-native": "0.39.2",
